fix: blacklist logic
